# sfmlRpg

./: .gitignore  CMakeLists.txt  README.md  db.sql
assets/: keys.cfg
assets/media/GUI_Interfaces/: Login.interface  MainMenu.interface
src/client/: AnimBase.cpp  AnimBase.h  Anim_Directional.cpp  Anim_Directional.h  AudioManager.h  BaseState.h  C_Drawable.h  C_SoundEmitter.h  C_SoundListener.h  C_SpriteSheet.h  C_UI_Element.h  Client.cpp  Client.h  ClientEntityManager.cpp  ClientEntityManager.h  ClientSystemManager.cpp  ClientSystemManager.h  DebugOverlay.h  EventManager.cpp  EventManager.h  FontManager.h  GUI_Element.cpp  GUI_Element.h  GUI_Event.h  GUI_Interface.cpp  GUI_Interface.h  GUI_Label.cpp  GUI_Label.h  GUI_Manager.cpp  GUI_Manager.h  GUI_Scrollbar.cpp  GUI_Scrollbar.h  GUI_Style.h  GUI_Textfield.cpp  GUI_Textfield.h  Game.cpp  Game.h  Main.cpp  Map.h  S_CharacterUI.cpp  (+33 more)
src/clientExec/: main.cpp
src/clientLib/: EventManager.h  GUI_Manager.cpp  Map.cpp  SharedContext.h  SoundManager.cpp  StateManager.cpp  StateManager.h  State_Login.cpp  State_Login.h  State_MainMenu.cpp  State_MainMenu.h  State_Register.cpp  State_Register.h
src/server/: C_Attacker.h  Map.cpp  Map.h  NetSettings.h  S_Collision.cpp  S_Collision.h  S_Combat.cpp  S_Combat.h  S_Movement.cpp  S_Network.cpp  S_Network.h  S_Timers.cpp  S_Timers.h  Server.cpp  Server.h  ServerEntityManager.cpp  ServerEntityManager.h  ServerSystemManager.cpp  ServerSystemManager.h  World.cpp  World.h
src/serverExec/: main.cpp
src/serverLib/: World.cpp  World.h
src/shared/: Bitmask.h  C_Base.h  C_Client.h  C_Collidable.h  C_Controller.h  C_Health.h  C_Movable.h  C_Name.h  C_Position.h  C_State.h  C_TimedComponentBase.h  Communicator.h  ECS_Types.h  EntityEvents.h  EntityManager.cpp  EntityManager.h  EntitySnapshot.cpp  EntitySnapshot.h  EventQueue.h  Message.h  MessageHandler.h  NetworkDefinitions.h  Observer.h  PacketTypes.cpp  PacketTypes.h  ResourceManager.h  S_Base.cpp  S_Base.h  S_Control.cpp  S_Control.h  S_State.cpp  S_State.h  SystemManager.cpp  SystemManager.h  Utilities.h
src/sharedDir/: ClientData.cpp  ClientData.h  PacketTypes.h  System_Manager.h
